# dsp-spec-sdk-registry

./: .gitignore  404.html  README.md  index.html  mkdocs.yml
docs/: dsp-registry.md  examples.md  getting-started.md  index.md  source-types.md
dsp-registry/: README.md  index.html  pyproject.toml
dsp-registry/app/: main.py  storage.py
dsp-registry/app/static/: style.css
dsp-registry/app/templates/: base.html  index.html  source.html
dsp-sdk/: README.md  pyproject.toml
dsp-sdk/dsp_sdk/: __init__.py
dsp-sdk/dsp_sdk/core/: io.py  models.py  validation.py
dsp-sdk/dsp_sdk/profiles/: api.py  file.py  graph.py  sql.py  stream.py
dsp-sdk/dsp_sdk/schemas/: dsp-1.0.json
dsp-sdk/tests/: test_basic.py
dsp-spec/: README.md
examples/: api_source.json  file_source.json  graph_source.json  index.html  sql_source.json  stream_source.json
getting-started/: index.html
mcp-adapter/: dsp-mcp-tools.json  server.py
search/: search_index.json
source-types/: index.html
