[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsp-registry"
version = "0.1.0"
description = "Reference DSP (Data Source Publication) registry service."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "DSP Contributors", email = "example@example.com" }
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "dsp-sdk @ file://../dsp-sdk"
]

[project.optional-dependencies]
dev = ["httpx>=0.27.0"]
